changed text alignment

--- a/manifesto.html
+++ b/manifesto.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Ch.2 View Source</title>
+    <!--Fatima Flores--> 
     <style>
         h1 {
             color:#3d4857; 
+            text-align: center;
             font-size:30px ;
             font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         }
@@ -52,7 +54,7 @@
         }
     </style>
 </head>
-
+    
 <body>
     <h1>View Source</h1>
     <div class="DESPERATE">DESPERATE</div>
