--- a/manifesto.html
+++ b/manifesto.html
@@ -7,7 +7,7 @@
     <!--Fatima Flores--> 
     <style>
         h1 {
-            color:#3d4857; 
+            color:#343e4b; 
             text-align: center;
             font-size:30px ;
             font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
