--- a/manifesto.html
+++ b/manifesto.html
@@ -28,6 +28,7 @@
         .MADDENED {
             color:rgb(145, 34, 34); 
             font-weight:bold;
+            text-align: end;
             font-size:160px;
             font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             animation: shake 0.1s infinite alternate; 
@@ -40,6 +41,7 @@
             font-size: 50px;
             color: rgb(255, 255, 255);
             letter-spacing: 10px;
+            text-align: center;
             text-decoration: line-through;
             opacity: 0.5;
 
