--- a/manifesto.html
+++ b/manifesto.html
@@ -61,7 +61,7 @@
     <h1>View Source</h1>
     <div class="DESPERATE">DESPERATE</div>
     <div class="MADDENED">MADDENED</div>
-    <div class="nameless">nameless</div>
+    <p><div class="nameless">nameless</div></p>
     
     
 
