--- a/manifesto.html
+++ b/manifesto.html
@@ -17,10 +17,10 @@
             font-style:italic;
             font-size:160px;
             font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            animation: pulse 1s infinite alternate;
+            animation: pulse .5s infinite alternate;
         }
         
-            @keyframes pulse {from {opacity: 0.4;}
+            @keyframes pulse {from {opacity: 0.2;}
             to {opacity: 1;}
                 
             } 
