--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <h1>The Meadow</h1>
-    <div id="sentence1" class="sentence-container">Edward in the sunlight was shocking. His skin <a href="sparkled.html">sparkled</a>, unnatural and mesmerizing.</div>
+    <div id="sentence1" class="sentence-container">Edward in the sunlight was shocking. His skin <a href="page02.html">sparkled</a>, unnatural and mesmerizing.</div>
     <div id="sentence2" class="sentence-container">Bella hesitated. Could something so beautiful still be <a href="monstrous.html">monstrous</a>?</div>
     <div id="sentence3" class="sentence-container">Or was it proof of something more <a href="extraordinary.html">extraordinary</a>?</div>
 </body>
