--- a/assignment2/page02.html
+++ b/assignment2/page02.html
@@ -41,7 +41,7 @@
 <body>
     <h1>The Meadow</h1>
     <div id="sentence1" class="sentence-container">Bella's breath caught as Edward turned his hand in the light. The brilliance of his skin was unlike anything she had ever seen—shimmering, refracting sunlight like diamonds.
-        <a href="page03.html">"It’s a part of what I am,"</a> he said, watching her reaction carefully.
+       <a href="/page03.html">"It’s a part of what I am,"</a> he said, watching her reaction carefully.
         </div>
     <div id="sentence2" class="sentence-container">Bella hesitated. Could something so beautiful still be <a href="monstrous.html">monstrous</a>?</div>
     <div id="sentence3" class="sentence-container">Or was it proof of something more <a href="extraordinary.html">extraordinary</a>?</div>
