--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Meadow</title>
-    <style>
-        body {
-            position: relative;
-            height: 100vh;
-            overflow: hidden;
-            background-image: url('https://wallpapers.com/images/hd/twilight-aesthetic-hifd9578tphdzivr.jpg');
-        }
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>The Meadow</title>
+   <style>
+       body {
+           position: relative;
+           height: 100vh;
+           overflow: hidden;
+           background-image: url('https://wallpapers.com/images/hd/twilight-aesthetic-hifd9578tphdzivr.jpg');
+           background-size: cover;
+           font-family: Arial, sans-serif;
+           color: white;
+           text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+       }
 
-        .sentence-container {
-            position: absolute;
-            width: 250px;
-            padding: 15px;
-            border: 1px solid #333;
-            border-radius: 8px;
-            background-color: #59678d;
-            text-align: center;
-            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
-        }
+       .sentence-container {
+           position: absolute;
+           width: 250px;
+           padding: 15px;
+           border: 1px solid #333;
+           border-radius: 8px;
+           background-color: rgba(89, 103, 141, 0.8);
+           text-align: center;
+           box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+       }
 
-        a {
-            text-decoration: none;
-            color: #5b1515;
-            font-weight: bold;
-        }
+       a {
+           text-decoration: none;
+           color: #f8d7da;
+           font-weight: bold;
+       }
 
-        a:hover {
-            text-decoration: underline;
-        }
+       a:hover {
+           text-decoration: underline;
+           color: #ffcccc;
+       }
 
-        #sentence1 { top: 50px; left: 600px; }
-        #sentence2 { top: 200px; left: 300px; }
+       #sentence1 { top: 50px; left: 600px; }
+        #sentence2 { top: 200px; left: 100px; }
         #sentence3 { top: 400px; left: 500px; }
     </style>
 </head>
